Fixed minor dark mode issue with directory page

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -472,6 +472,10 @@ picture {
   display: flex;
 }
 
+main.list-view.dark {
+  background: #196726;
+}
+
 .hero-label p {
   font-size: 3.8vw;
   display: inline;
